force-app/main/default/objects/ORTLAttendee__c.object
<CustomObject>
    <fields>
        <fullName>AttendeeName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To display Attendee name who attend Final Risk Assessment meeting</description>
        <label>Attendee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attendee1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk</label>
        <referenceTo>ORTLRisk__c</referenceTo>
        <relationshipLabel>Attendee</relationshipLabel>
        <relationshipName>Attendee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Attendee</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Risk Assessment</fullName>
                </value>
                <value>
                    <fullName>Final Risk Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Attendee</label>
    <nameField>
        <displayFormat>AT-{000}</displayFormat>
        <label>Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>